[package]
name = "lapin-websocket-prototype"
version = "0.1.0"
authors = ["Aram Peres <aram.peres@wavy.fm>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
lapin = "1.1.3"
tokio-amqp = "0.1.1"
warp = "0.2.3"
futures = "0.3.5"
futures-util = "0.3.5"
